// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests different variations of classes Renders LunchBlockComponent with a dr 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "green",
            },
          ]
        }
      >
        Directed Reaserch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
          Object {
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Dr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 102
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          11:25
           - 
          11:52 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "green",
            },
          ]
        }
      >
        Directed Reaserch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
          Object {
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Dr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 102
      </Text>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a free 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "purple",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              undefined,
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          11:25
           - 
          11:52 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "purple",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              undefined,
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a major 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "red",
            },
          ]
        }
      >
        Test Major
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          11:25
           - 
          12:22 PM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
          Object {
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Fitness center
      </Text>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a minor 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": "gold",
            },
          ]
        }
      >
        Test minor
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          10:55
           - 
          11:52 AM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
          Object {
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mrs. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 334
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "fontSize": 25,
              "fontWeight": "bold",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
              },
              Object {
                "flex": 1,
                "textAlign": "right",
              },
              Object {
                "flex": 0,
                "paddingLeft": 5,
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
  </View>,
]
`;
